--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,5 @@
 .main-nav {
-  background: #2c3e50;
+  background: #d0e4949e;
   padding: 1rem;
 }
 
@@ -12,7 +12,7 @@
 }
 
 .main-nav a {
-  color: white;
+  color: rgb(80, 113, 87);
   text-decoration: none;
   font-size: 1.1rem;
   padding: 0.5rem 1rem;
