--- a/frontend/src/pages/WordSearchPage.css
+++ b/frontend/src/pages/WordSearchPage.css
@@ -6,6 +6,16 @@
     padding: 20px;
     text-align: center;
   }
+
+  body {
+    background-image: url('../images/background2.jpg');
+    background-size: cover;   /* 使背景图铺满容器，可能会裁剪一部分 */
+    background-attachment:scroll;
+    margin: 0;
+    padding: 0;
+    /* height: 100vh; 让背景高度覆盖整个视口 */
+    position: relative;
+  }
   
   /* 标题部分 */
   .main-header h1 {
