--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,5 @@
 .main-nav {
-  background: #2c3e50;
+  background: #d0e4949e;
   padding: 1rem;
 }
 
@@ -12,7 +12,7 @@
 }
 
 .main-nav a {
-  color: white;
+  color: rgb(80, 113, 87);
   text-decoration: none;
   font-size: 1.1rem;
   padding: 0.5rem 1rem;
@@ -29,7 +29,7 @@
   max-width: 800px;
   margin: 2rem auto;
   padding: 2rem;
-  background: white;
+  background-color: rgba(255, 255, 255, 0.8); /* 这里的 0.8 表示80%的不透明度 */
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0,0,0,0.1);
 }
@@ -82,12 +82,12 @@
 }
 
 .button-group button:first-child {
-  background: #3498db;
+  background: #b7da57;
   color: white;
 }
 
 .button-group button:last-child {
-  background: #27ae60;
+  background: #597629;
   color: white;
 }
 
@@ -134,6 +134,7 @@
   padding: 20px;
   max-width: 1200px;
   margin: 0 auto;
+  animation: fadeIn 1.5s forwards; /* 页面加载时的渐入效果 */
 }
 
 .editor-content {
@@ -141,7 +142,7 @@
 }
 
 .word-form-section {
-  background: #fff;
+  background-color: rgba(255, 255, 255, 0.8); /* 这里的 0.8 表示80%的不透明度 */
   padding: 2rem;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
